# devops-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
doc/: configuration.md  dssh.md  dvpn.md
src/: aws.rs  config.rs  lib.rs  tunnelblick.rs
wix/: main.wxs
