[package]
name = "devops-cli"
description = "devops cli tools"
authors = ["Dennis Frenken <dev@frenken.email>"]
version = "0.1.2"
license = "MIT"
edition = "2024"
repository = "https://github.com/denfren/devops-cli.git"
homepage = "https://github.com/denfren/devops-cli"

[dependencies]
anyhow = "1"
aws-config = "1.8"
aws-sdk-autoscaling = "1.90"
aws-sdk-ec2 = "1.158"
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
aws-types = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
derive-new = "0.7"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenvy = "0.15"
indexmap = { version = "2", features = ["serde"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
osascript = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
